styles.css
@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
/* General Styles */
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Rubik',sans-serif;
}
body {
    font-family: Arial, sans-serif;
    color: white;
    margin: 0;
    padding: 1;
    min-height:100vh;
    background-image: url('./Images/pexels-rpnickson-2885320.jpg');
    background-repeat: no-repeat;
    background-size: cover; 
    background-position: center;
    background-attachment: fixed;
}

.navbar {
    max-width: 1250px;
    width: 100%;
    margin: 0 auto;
}

/* Header start */
.header{
    position: fixed; 
    background-image: url('./Images/pexels-rpnickson-2885320.jpg');
    background-repeat: no-repeat;
    background-size: cover; 
    height: 90px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
}

nav{
    display: flex;
    justify-content: space-between;
    align-items: center;
}
li{
    list-style: none;
}

.navbar a{
    color: rgb(255, 255, 255);
    font-weight: 700;
    text-decoration: none;
    font-size: 2rem;
}
.navbar a:hover {
    width: 100%;
    color: rgb(44, 185, 204);
}

.navbar .logo a{
    top:0;
    left:0;
    width:5.5rem;
}
.navbar .links{
    display: flex;
    gap: 2rem;
}
.navbar .toogle_btn{
    color: white;
    font-size: 1.6rem;
    cursor: pointer;
    display: none;
}
.dropdown_menu{
    display: none;
    position: absolute;
    right: 2rem;
    top: 60px;
    height: 0;
    width: 280px;
    background: rgba(255,255,255,0.1);
    backdrop-filter: blur(20px);
    border-radius: 10px;
    overflow: hidden;
    align-content: center;
}

/* Responsive design */
.dropdown_menu.open{
    height:110px;  
}

.dropdown_menu li{
    padding: 0.7 rem;
    display: flex;
    align-items: center;
    justify-content: center ;
}

/* main section */
.main{
    height:calc(100vh - 60px);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    color: white;
    width: 100%;
    max-width: 1250px;
    margin: 0 auto;
    /* padding: 100px; */
}


/* Home start */
.home{
    position:static;
    top: 0;
    width: 100%;
    height:100vh;
    z-index: 1;
    padding: 250px 0 50px;

}

.home .home-info{
    display: flex;
    align-items: center;
    justify-content: center;
}
.home-info .left{
    flex:1;
}
.left span{
    font-size: 15px;
    font-weight: bold;
    text-transform: uppercase;
    letter-spacing: 0.5px;
    background: linear-gradient(130deg,#383528 0%,#191919 100%) ;
    border: 1px solid #3b3b3b;
    color: white;
    padding: 5px 25px;
    border-radius: 25px;
}

.left h1{
    font-size: 4rem;
    margin: 25px  0;
    color: white;
}

.left p{
    width: 90%;
    font-size: 1.1rem;
    font-weight: 400;
    line-height: 25px;
    color: white;
    mask-border: 50px;
    margin-bottom: 35px;
    text-align: justify;
}

.left .btn{
    display: flex;
    align-items: center;
    gap: 20px;
}

.left .btn button{
    font-size: 14px;
    font-weight: 600;
    padding: 12px 24px;
    border-radius: 6px;
    color: white;
    border: none;
    outline: none;
    cursor: pointer;
    transition:  0.3s ease-in;
}

.left .btn button:first-child{
    background: #ffc448 ;
    border: 1px solid #ffc448;
}
.left .btn button:first-child:hover{
    background: black ;
    color: #ffc448;
    transform:translateY(-5px);
}

.left .btn button:last-child{
    background: black ;
    border: 1px solid black;
}
.left .btn button:last-child:hover{
    background: white ;
    color: black;
    transform:translateY(-5px);
    border-color: white;
}

.social{
    display: flex;
    align-items: center;
    margin-top: 50px;
}

.social .social-links{
    display: flex;
    align-items: center;
    gap: 15px;
}

.social-links a{
    font-size: 1.2rem;
    border-radius: 50%;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 40px;
    height: 40px;
    background: linear-gradient(130deg,#383528 0%,#191919 100%) ;
    border: 1px solid #3b3b3b;
    transition: 0.3s ease-in; 
}
.social-links a:hover{
    transform:translateY(-5px);
}
.home-info .right{
    flex:1;
}

.right .profile{
    text-align: right;
}   
.right .profile img{
    width: 450px;
    height:400px;
    border-radius: 50%;
    object-fit: cover;
    border:4px solid #ffc448;
    box-shadow: 0 0 50px #ffc448;
}
@media(max-width: 900px){
    .navbar .links,
    .navbar .action_btn{
        display: none;
    }

    .navbar .toogle_btn{
        display: block;
    }

    .dropdown_menu{
        display: block;
    }

}

@media(max-width: 576px){
    .dropdown_menu{
        left:2rem;
        width: unset;
    }

}

.contactForm{
    padding-top: 20%;
}


h2 {
    font-size: 2rem;
    /* color: #333; */
    margin-bottom: 20px;
}

ul {
    list-style-type: none;
    padding-left: 0;
}

ul li {
    font-size: 1.1rem;
    /* color: #555; */
    margin-bottom: 10px;
}

footer {
    background-color: #333;
    color: white;
    text-align: center;
    padding: 10px 0;
}

/* Contact Form Styles */
form {
    background-color: rgb(30, 26, 55);
    /* background-color: transparent; */
    padding: 20px;
    border-radius: 8px;
    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
}

form label {
    display: block;
    margin-top: 10px;
}

form input, form textarea {
    width: 98%;
    padding: 10px;
    margin-top: 5px;
    border-radius: 4px;
    border: 1px solid #ccc;
    font-size: 1rem;
}

form button {
    background-color: #c05959;
    color: white;
    padding: 10px 20px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
}

form button:hover {
    background-color: #575757;
}

